// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form, map preview renders map options 1`] = `
<div
  aria-hidden="true"
>
  <div
    id="__GMAP__CONTAINER__"
  >
    <div
      id="__GMAP__"
      style="height: 100%;"
    />
  </div>
  <div
    id="__GSTV__CONTAINER__"
  >
    <div
      id="__GSTV__"
      style="height: 100%;"
    />
  </div>
</div>
`;

exports[`Form, map preview renders map options 2`] = `
<div>
  <div
    id="__GMAP__CONTAINER__"
  >
    <div
      id="__GMAP__"
      style="height: 100%;"
    />
  </div>
  <div
    id="__GSTV__CONTAINER__"
  >
    <div
      id="__GSTV__"
      style="height: 100%;"
    />
  </div>
</div>
`;

exports[`Form, map select renders map options 1`] = `
Array [
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd css-1coxseh-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
    role="button"
    tabindex="0"
  >
    Frauenfeld
  </div>,
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1hf04jj-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      aria-label="Preview map"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="VisibilityIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>,
]
`;
